Saylani Assigment done

--- a/index.html
+++ b/index.html
@@ -99,12 +99,18 @@
                 <h2>
                     What Are We Doing</h2>
                 <div class="icons">
-                    <div><img src="./images/walfare.png" alt=""></div>
-                    <div><img src="./images/medical.png" alt=""></div>
-                    <div><img src="./images/sadqa.png" alt=""></div>
-                    <div><img src="./images/ro.png" alt=""></div>
-                    <div><img src="./images/Education.png" alt=""></div>
-                    <div><img src="./images/Foods.png" alt=""></div>
+                    <div><img src="./images/walfare.png" alt="">
+                        <span>Welfare</span></div>
+                    <div><img src="./images/medical.png" alt="">
+                    <span>Medical</span></div>
+                    <div><img src="./images/sadqa.png" alt="">
+                    <span>Online Sadqah</span></div>
+                    <div><img src="./images/ro.png" alt="">
+                    <span>RO Plant</span></div>
+                    <div><img src="./images/Education.png" alt="">
+                    <span>Education</span></div>
+                    <div><img src="./images/Foods.png" alt="">
+                    <span>Food</span></div>
                 </div>
 
             </div>
