Saylani Class Assignment

--- a/index.html
+++ b/index.html
@@ -438,20 +438,24 @@
                         <li><a href="">Bank Details</a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="contact">
 
                     <ul>
-                        <li><a href=""><h4>contact</h4></a></li>
-                        <li><a href="">Introduction</a></li>
-                        <li><a href="">Chairman Message</a></li>
-                        <li><a href="">Annual Report</a></li>
-                        <li><a href="">Bank Details</a></li>
+                        <li><h4>Contact</h4></li>
+                        <li>A-25, Bahadurabad Chowrangi Karachi, Pakistan</li>
+                        <li>UAN: 111-729-526 (+0092-213)4130786-90</li>
+                        <li>CELL: 92-311-1729526</li>
+                        <li>USA NO +1(716)941 7792</li>
                     </ul>
                 </div>
-                <div>
-                    <img src="./images/approved.png" alt="">
-                </div>
             </div>
+            <div class="last_logo">
+                <hr>
+                <img src="./images/approved.png" alt="">
+                <hr>
+                <span>Copyright © 2023 by Saylani Welfare Int Trust</span>
+            </div>
+            
         </footer>
     </body>
 
